# geogram

./: .gitmodules  CMakeLists.txt  README.md  configure.sh  makefile
examples/geogram/: CMakeLists.txt
examples/geogram/opennl_LSCM/: main.cpp
include/geogram/: version.h
include/geogram/NL/: nl_blas.h  nl_cholmod.h  nl_cuda.h  nl_mkl.h  nl_preconditioners.h  nl_superlu.h
include/geogram/delaunay/: LFS.h  (+11 more)
include/new/: amgcl_adapter_block_matrix.hpp  amgcl_adapter_complex.hpp  amgcl_adapter_crs_builder.hpp  amgcl_adapter_crs_tuple.hpp  amgcl_adapter_eigen.hpp  amgcl_adapter_epetra.hpp  amgcl_adapter_reorder.hpp  amgcl_adapter_scaled_problem.hpp  amgcl_adapter_ublas.hpp  amgcl_adapter_zero_copy.hpp  amgcl_amg.hpp  amgcl_backend_blaze.hpp  amgcl_backend_block_crs.hpp  amgcl_backend_builtin.hpp  amgcl_backend_builtin_hybrid.hpp  amgcl_backend_cuda.hpp  amgcl_backend_default_direct_solver.hpp  amgcl_backend_detail_matrix_ops.hpp  amgcl_backend_eigen.hpp  amgcl_backend_hpx.hpp  amgcl_backend_interface.hpp  amgcl_backend_mixing.hpp  amgcl_backend_mkl.hpp  amgcl_backend_vexcl.hpp  amgcl_backend_viennacl.hpp  amgcl_coarsening_aggregation.hpp  amgcl_coarsening_as_scalar.hpp  amgcl_coarsening_detail_galerkin.hpp  amgcl_coarsening_detail_scaled_galerkin.hpp  amgcl_coarsening_plain_aggregates.hpp  amgcl_coarsening_pointwise_aggregates.hpp  amgcl_coarsening_rigid_body_modes.hpp  amgcl_coarsening_ruge_stuben.hpp  amgcl_coarsening_runtime.hpp  amgcl_coarsening_smoothed_aggr_emin.hpp  amgcl_coarsening_smoothed_aggregation.hpp  amgcl_coarsening_tentative_prolongation.hpp  amgcl_deflated_solver.hpp  amgcl_detail_inverse.hpp  amgcl_detail_qr.hpp  (+171 more)
src/: CDT_2d.cpp  CVT.cpp  LFS.cpp  PCK.cpp  RVD.cpp  RVD_callback.cpp  RVD_mesh_builder.cpp  algorithm.cpp  amgcl_adapter_block_matrix.hpp  amgcl_adapter_complex.hpp  amgcl_adapter_crs_builder.hpp  amgcl_adapter_crs_tuple.hpp  amgcl_adapter_eigen.hpp  amgcl_adapter_epetra.hpp  amgcl_adapter_reorder.hpp  amgcl_adapter_scaled_problem.hpp  amgcl_adapter_ublas.hpp  amgcl_adapter_zero_copy.hpp  amgcl_amg.hpp  amgcl_backend_blaze.hpp  amgcl_backend_block_crs.hpp  amgcl_backend_builtin.hpp  amgcl_backend_builtin_hybrid.hpp  amgcl_backend_cuda.hpp  amgcl_backend_default_direct_solver.hpp  amgcl_backend_detail_matrix_ops.hpp  amgcl_backend_eigen.hpp  amgcl_backend_hpx.hpp  amgcl_backend_interface.hpp  amgcl_backend_mixing.hpp  amgcl_backend_mkl.hpp  amgcl_backend_vexcl.hpp  amgcl_backend_vexcl_static_matrix.hpp  amgcl_backend_viennacl.hpp  amgcl_coarsening_aggregation.hpp  amgcl_coarsening_as_scalar.hpp  amgcl_coarsening_detail_galerkin.hpp  amgcl_coarsening_detail_scaled_galerkin.hpp  amgcl_coarsening_plain_aggregates.hpp  amgcl_coarsening_pointwise_aggregates.hpp  (+294 more)
(+146 files in other folders)
